upload button visible again. progress bar fix.

--- a/src/octoprint/plugins/svgtogcode/static/css/mrbeam.css
+++ b/src/octoprint/plugins/svgtogcode/static/css/mrbeam.css
@@ -1834,7 +1834,7 @@ input.search-query,
 	color: #999;
 	text-align: left;
 	text-shadow: none;
-	padding-left: 0.5em;
+	/*padding-left: 0.5em;*/
 	background-color: #DD0000;
 	background-image: none;
 	white-space: nowrap;
